* bug fix #1006636 VisibleOnUserRole attribute for x:panelTab tag
* bug fix #1049792 rendered attribute is disabled for commandNavigation
* bug fix #1042890 HtmlNavigationRenderer renders separator for parameters
* bug fix #1046763 Temp jar built at config time not deleted
* bug fix MYFACES-50: JBuilder 2005 fails to load TLD file descriptors
* refactor the jar files :
  - myfaces-jsf-api.jar contains the api classes (no change)
  - myfaces-impl.jar contains the standard jsf implementation
  - myfaces-extensions.jar contains the myfaces extensions
  - myfaces.jar containes all the myfaces code, and can be used in place of the 3 above
* add an x:aliasBean component
* add an x:div component
* add a validator for ISBN codes (<x:validateISBN/>)
* new tree table feature contributed by David Le Strat (MYFACES-8)
* new ExtensionsFilter, replacing the MultipartFilter, and allowing embedded resources in the jar
* popup component now uses embeded resources
* calendar component now uses embeded resources
* new HTML Editor component (<x:htmlEditor>). Basically, it's an rich text WYSIWYG component.
* add a popup calendar to the inputDate tag.
----------------------------------------------------------------------
Changes in Release 1.0.7 beta
* new custom component: HtmlPanelStack
* new custom component: Stylesheet
* new extended HtmlInputTextarea component (with user role support)
* new Autoscroll feature (restores horizontal and vertical browser page scrolling)
* new previousRowDataVar attribute in extended HtmlDataTable (see tld description)
* Japanese translation
* fixed problems with nested UIData and HtmlDataTable components
* writeText method in default ResponseWriter now maps newlines to <br/> and
  successive spaces to &nbsp; entities
* corrected some problems with rowIndexVar and rowCountVar in HtmlDataList
* extended HtmlDataTable now also supports rowIndexVar and rowCountVar
* bug #1020264 x:navigationMenuItem icon problem